Build quiz and prevent character overlap

--- a/src/pages/admin/styles.scss
+++ b/src/pages/admin/styles.scss
@@ -21,8 +21,8 @@
 
   .player-box {
     text-align: left;
-    width: 185px;
-    height: 210px;
+    width: 250px;
+    height: 230px;
     border: 1px solid #ccc;
     float: left;
     margin-right: 10px;
